@@ -78,3 +78,11 @@ HORAS TRABALHADAS: 6h
 - Implementação de countdown no Queue (bugzId:107)
 
 HORAS TRABALHADAS: 8h
+
+==========
+28/10/2009
+==========
+
+- Manter link original do article original no Queue (bugzId:141)
+
+HORAS TRABALHADAS: 2h
